# zcamp

./: .dockerignore  .env.example  .gitignore  .ignore  .include  Dockerfile  README.md  docker-compose.yml  km_hunter.db  package-lock.json  package.json  railway.toml  rollup.config.js  rollup.config.mjs  tailwind.config.js  testing_id_retrieval.js
backend/: activity_manager.py  constants.py  migrate_crew_centric.py  requirements.txt  reset_database.py  server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ml/: README.md  annotator.py  camp_classifier.py  celestial-desto-processor.py  trainer.py
public/: index.html  trophy.html
scripts/gatecamps ml/: README.md  pyproject.toml
scripts/gatecamps ml/src/: config.py  main.py
scripts/gatecamps ml/src/data/: __init__.py  feature_engineering.py  killmail_processor.py
scripts/gatecamps ml/src/models/: __init__.py  gate_camp_model.py
scripts/gatecamps ml/src/training/: __init__.py  trainer.py
scripts/gatecamps ml/src/ui/: __init__.py  labeling_interface.py
server/: campManager.js  campStore.js  roamManager.js  roamStore.js  server.js  serverActivityManager.js  serverCampManager.js  serverRoamManager.js
src/: ActiveBattles.svelte  ActiveCamps.svelte  ActiveRoams.svelte  App.svelte  CampCrusher.svelte  ContextMenu.svelte  FilterListManager.svelte  KillmailViewer.svelte  Leaderboard.svelte  LocationTracker.svelte  Login.svelte  MapVisualization.svelte  NPCPage.svelte  PinnedSystemsList.svelte  ProfileListManager.svelte  SalvageFields.svelte  app.css  (+27 more)
(+6 files in other folders)
